Fix bug where updated border is not fully included in the changes message. Also two smaller bugs and polish.